Fixed width for alert boxes on small displays

--- a/web/static/css/subtle.css
+++ b/web/static/css/subtle.css
@@ -1,10 +1,7 @@
 body    {
         padding-top: 5rem;
 }
-.popups {
-    padding: 0rem 6.5rem;
-    text-align: center;
-}
+
 .index  {
     padding: 3rem 1.5rem;
     text-align: center;
@@ -18,6 +15,13 @@ body    {
 #browser {
   height: 50px;
   line-height: 50px;
+}
+
+@media(min-width: 768px) {
+  .popups {
+      padding: 0rem 6.5rem;
+      text-align: center;
+  }
 }
 
 @media(max-width: 480px) {
